--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,9 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install topotherm
+      run: |
+        python -m pip install topotherm
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
