--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,8 +29,8 @@ jobs:
           channel-priority: strict
       - name: Install dependencies
         run: |
-          conda install coin-or-cbc
-          # sudo apt-get install  coinor-cbc coinor-libcbc-dev
+          # conda install coin-or-cbc
+          sudo apt-get install  coinor-cbc coinor-libcbc-dev
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
