--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -45,5 +45,5 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest tests/run_hydraulics_test.py
-          pytest tests/run_sts_test.py --solver cbc
+          pytest tests/hydraulics.py
+          pytest tests/sts.py --solver cbc
