--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
 
@@ -33,7 +33,7 @@ jobs:
           sudo apt-get install  coinor-cbc coinor-libcbc-dev
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install topotherm
         run: |
           python -m pip install .
@@ -45,5 +45,6 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
+          pytest tests/test_setup.py
           pytest tests/hydraulics.py
-          pytest tests/sts.py --solver cbc
+          # pytest tests/sts.py --solver cbc
