--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: topotherm>
+name: topotherm
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.9
+  - python>=3.9,<=3.12
   - pip
   - pip:
     - -r requirements.txt
