Fixed fileio, optimized simultaneity cals, fixed tests and examples
All tests are passing, several improvements to the postprocessing script. Added a post-optimization simultaneity module by @OssamaElshimy and refactored for better integration with existing code.

--- a/examples/two-producers/data/config.yaml
+++ b/examples/two-producers/data/config.yaml
@@ -29,8 +29,8 @@ economics:
   source_c_inv: [0, 1]  # Investment costs for each source
   source_c_irr: [0.08, 0.07]  # Interest rate for each source
   source_lifetime: [20., 20.]  # years for source investments
+  source_max_power: [10e4, 10e4]  # Maximum power for each source in kW
   source_price: [80e-3, 79e-3]  # Price for heat production at supply in €/kW
-  consumer_flh: 2500  # h/y
   heat_price: 120e-3  # Selling Price for heat in €/kW
   pipes_c_irr: 0.08  # Interest rate
   pipes_lifetime: 40.  # years for piping investments
