includes modules API, new index structure and variables formatted to numpy
# check if toctree isn ok
# check if all the important modules are displayed
# general docu check up

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,6 +148,14 @@ dev = [
     "mypy",
 ]
 docs = [
-    "sphinx",
-    "sphinx-rtd-theme",
+  "sphinx>=7",
+  "sphinx-rtd-theme",
+  "sphinx-copybutton",
+  "sphinx-autoapi",
+  "myst-parser",
+  "linkify-it-py",
+  "sphinx-autodoc-typehints",
+  "matplotlib",           # if you want .. plot:: support
+  "sphinxcontrib-mermaid" # for mermaid diagrams
+  
 ]
