--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,11 +29,9 @@ jobs:
           channel-priority: strict
       - name: Install dependencies
         run: |
-          # conda install coin-or-cbc
-          sudo apt-get install  coinor-cbc coinor-libcbc-dev
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest
-          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install -r requirements.txt
+          python -m pip install highspy
       - name: Install topotherm
         run: |
           python -m pip install .
@@ -47,4 +45,4 @@ jobs:
         run: |
           pytest tests/test_setup.py
           pytest tests/hydraulics.py
-          # pytest tests/sts.py --solver cbc
+          pytest tests/sts.py --solver highs
