--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,12 +35,10 @@ jobs:
       - name: Install topotherm
         run: |
           python -m pip install .
-      - name: Lint with flake8
+      - name: Lint with ruff
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          pip install ruff
+          ruff check .
       - name: Test with pytest
         run: |
           pytest tests/test_setup.py
